ui/css/main.css
/* ... */
.domain_detailsbox_content span {
	width:180px;
	height:auto;
	float:left;
	margin:0 0 10px 0;
	padding:0;
	display:inline;
	font-size:12px;
	text-align:left;
	font-weight:normal;
}

.domain_detailsbox_label {
	width:70px;
	height:auto;
	float:left;
	margin:0 0 5px 0;
	padding:0;
	display:inline;
	font-size:12px;
	text-align:left;
	font-weight:bold;
}

.breadcrumb_box {
	width:100%;
	height:auto;
	float:left;
	margin:2px 0 5px 3px;
	padding:0;
}


.breadcrumb_box span {
	width:auto;
	height:auto;
	color:#999;
	font-size:11px;
	font-weight:normal;
	margin:0 5px 0 5px;
}


.breadcrumb_box a:link {
	width:auto;
	height:auto;
	color:#2c8bbc;
	font-size:11px;
	font-weight:normal;
	text-decoration:none;
	margin:0 5px 0 5px;
}

.breadcrumb_box a:visited {
	width:auto;
	height:auto;
	color:#2c8bbc;
	font-size:11px;
	font-weight:normal;
	text-decoration:none;
	margin:0 5px 0 5px;
}

.breadcrumb_box a:hover {
	width:auto;
	height:auto;
	color:#2c8bbc;
	font-size:11px;
	font-weight:normal;
	text-decoration:underline;
	margin:0 5px 0 5px;
}

.rev_wiztop {
	width:929px;
	height:111px;
	float:left;
	background:url(../images/rev_wiztop.jpg) no-repeat top left;
	margin:0;
	padding:0;
	overflow:hidden;
}
.rev_wizardbox {
	width:888px;
	height:44px;
	float:left;
	margin:19px 0 0 20px;
	padding:0;
}

.rev_wizardsteps{
	width:222px;
	height:44px;
	float:left;
	margin:0;
	padding:0;
}

.rev_wizardsteps h3{
	width:auto;
	height:auto;
	float:left;
	font-size:19px;
	text-align:left;
	font-weight:normal;
	color:#FFF;
	margin:10px 0 0 10px;
	padding:0;
}


.revwiz_selectednumber {
	width:30px;
	height:33px;
	float:left;
	background:url(../images/revwiz_selectednumber.gif) no-repeat top left;
	color:#FFF;
	font-size:24px;
	text-align:left;
	font-weight:bold;
	margin:0;
	padding:9px 0 0 12px;
}

.revwiz_nonselectednumber {
	width:30px;
	height:33px;
	float:left;
	background:url(../images/revwiz_nonselectednumber.gif) no-repeat top left;
	color:#FFF;
	font-size:24px;
	text-align:left;
	font-weight:bold;
	margin:0;
	padding:9px 0 0 12px;
}

.rev_wizmid {
	width:929px;
	height:458px;
	float:left;
	background:url(../images/rev_wizmid.gif) repeat-y top left;
	margin:0;
	padding:0;
}

.rev_wizmid_maincontent {
	width:902px;
	height:430px;
	float:left;
	margin:0 0 0 15px;
	padding:0;
	display:inline;
}

.rev_wizmid_maincontent p{
	width:100%;
	height:auto;
	float:left;
	color:#333;
	text-align:left;
	font-size:11px;
	font-weight:normal;
	
}

.rev_wizmid_maincontent a:link{
	width:auto;
	height:auto;
	text-align:left;
	font-size:11px;
	font-weight:normal;
	color:#2c8bbc;
	text-decoration:underline;
}

.rev_wizmid_maincontent a:visited{
	width:auto;
	height:auto;
	text-align:left;
	font-size:11px;
	font-weight:normal;
	color:#2c8bbc;
	text-decoration:underline;
}

.rev_wizmid_maincontent a:hover{
	width:auto;
	height:auto;
	text-align:left;
	font-size:11px;
	font-weight:normal;
	color:#2c8bbc;
	text-decoration:underline;
}

.rev_wizmid_titlebox {
	width:902px;
	height:auto;
	float:left;
	margin:0;
	padding:0;
}

.rev_wizmid_titlebox h2{
	width:902px;
	height:auto;
	text-align:left;
	color:#214152;
	font-size:24px;
	font-weight:normal;
	float:left;
	margin:0;
	padding:0;
}

.rev_wizmid_contentbox {
	width:902px;
	height:325px;
	float:left;
	margin:10px 0 0 0;
	padding:0;
	display:inline;
	
}

.rev_wizmid_tempbox {
	width:893px;
	height:284px;
	float:left;
	margin:0;
	padding:0;
	border:1px solid #666;
}

.rev_wizmid_tempbox_left {
	width:182px;
	height:284px;
	float:left;
	margin:0;
	padding:0;
}

.rev_wizmid_tempbox_right {
	width:709px;
	height:284px;
	float:left;
	margin:0;
	padding:0;
}

.rev_wiztemplistpanel {
	width:709px;
	height:254px;
	float:left;
	margin:0;
	padding:0;
	background:#FFF repeat top left;
	cursor:pointer;
	cursor:hand;
}

.rev_wiztemplistactions {
	width:709px;
	height:28px;
	float:left;
	margin:0;
	padding:0;
	background:#f2f2f2 repeat top left;
}

.rev_wiztemplist_actionsbox {
	width:auto;
	height:auto;
	float:right;
	margin:8px 10px 0 0;
	padding:0;
}

.rev_wiztemplist_actionsbox a:link {
	width:auto;
	height:auto;
	float:left;
	color:#2c8bbc;
	font-size:12px;
	text-align:left;
	font-weight:normal;
	text-decoration:none;
	margin:0 15px 0 0;
	padding:0;
}

.rev_wiztemplist_actionsbox a:visted {
	width:auto;
	height:auto;
	float:left;
	color:#2c8bbc;
	font-size:12px;
	text-align:left;
	font-weight:normal;
	text-decoration:none;
	margin:0 15px 0 0;
	padding:0;
}
.rev_wiz_reviewbox {
	width:870px;
	height:295px;
	float:left;
	margin:0;
	padding:0;
	overflow-y:scroll;
	overflow-y:auto;
	
}

.rev_wiz_reviewlist {
	width:830px;
	height:auto;
	float:left;
	background:url(../images/tick_arrow.gif) no-repeat top left;
	background-position: 5px 0;
	margin:10px 0 5px 10px;
	border:1px solid #CCC;
	padding:5px;
	display:inline;
}

.rev_wiz_reviewlabel {
	width:150px;
	height:auto;
	float:left;
	color:#214152;
	font-size:12px;
	text-align:left;
	font-weight:bold;
	margin:0 0 0 30px;
	padding:0;
}

.rev_wiz_reviewanswers {
	width:650px;
	height:auto;
	float:left;
	color:#333;
	font-size:12px;
	text-align:left;
	font-weight:normal;
	margin:0;
	padding:0;
}

.rev_wiztemplist_actionsbox a:hover {
	width:auto;
	height:auto;
	float:left;
	color:#2c8bbc;
	font-size:12px;
	text-align:left;
	font-weight:normal;
	text-decoration:underline;
	margin:0 15px 0 0;
	padding:0;
}


.rev_wiztemplistbox {
	width:709px;
	height:auto;
	float:left;
	border-bottom:1px solid #666;
	margin:0;
	padding:0;
	background:#FFF repeat top left;
	cursor:pointer;
	cursor:hand;
}
.rev_wiztemp_listtext {
	width:520px;
	height:auto;
	float:left;
	color:#021a28;
	font-size:11px;
	font-weight:normal;
	text-align:left;
	margin:5px 0 5px 0;
	padding:0;
}

.rev_wiztemp_ownertext {
	width:80px;
	height:auto;
	float:left;
	color:#021a28;
	font-size:11px;
	font-weight:bold;
	text-align:left;
	margin:5px 0 5px 0;
	padding:0;
}
/* ... */

